@@ -7,6 +7,7 @@ User-visible changes in version 0.9.3  (2010-0 -  ):
   The GUI in the Baseline Mode handles a separate baseline for each dataset now.
 * abandoned syntax like 5<x<10, use 5<x and x<10
 * syntax: '*' wildcard can be used when deleting functions and variables
+* GUI: changed numeric format in a few place (eg. coordinates on the status bar)
 
 User-visible changes in version 0.9.2  (2010-05-07):
 * To compile fityk, Boost (only headers) and xylib must be installed first.
